# GBP-MANAGER

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8b8a3d1ab7aa_add_organization_billing_fields.py  a1b2c3d4e5f6_expand_google_business_profile_fields.py  b2c3d4e5f6a7_create_audit_reports_table.py  c3d4e5f6a7b8_create_reviews_posts_automation_tables.py  c5d0fcafa90a_create_initial_schema.py  d4c2a7d9f1b0_add_pending_invites_to_memberships.py  d5e6f7a8b9c0_create_agency_tables.py  e1f2a3b4c5d6_add_processed_webhook_events.py  f0e1d2c3b4a5_add_organization_plan_limits.py
backend/app/: __init__.py  main.py
backend/app/admin/: service.py
backend/app/ai/: __init__.py  audit_prompts.py  audit_service.py  providers.py  service.py  visibility_scoring.py
backend/app/api/: deps.py
backend/app/core/: config.py  email.py  encryption.py  logging.py  plans.py  rate_limit.py  security.py  sentry.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/google/: __init__.py  client.py  models.py  scoring.py  service.py
backend/app/models/: __init__.py  agency.py  audit.py  automation.py  heatmap_run.py  keyword.py  post.py  project.py  ranking_history.py  review.py  target_location.py  user.py  webhook_event.py
backend/app/organizations/: __init__.py  models.py
backend/app/rank_tracking/: __init__.py  service.py
backend/app/schemas/: admin.py  agency.py  audit.py  auth.py  (+11 more)
(+115 files in other folders)
