[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-local-seo-platform-backend"
version = "0.1.0"
description = "Backend services for the AI Local SEO SaaS platform."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

# File-length enforcement: run `python ../scripts/check_file_length.py` in CI.
# No file in backend/app may exceed 300 lines. Split at logical service boundaries.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
